[gd_scene load_steps=3 format=3 uid="uid://58w18k2qjipa"]

[ext_resource type="Script" uid="uid://bebu6xd7awcxs" path="res://scripts/ui/TerritoryScreen.gd" id="1_territory"]
[ext_resource type="Script" uid="uid://dkl6lpcqoqw2" path="res://scripts/ui/ResourceDisplay.gd" id="2_xlxuo"]

[node name="TerritoryScreen" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1273.0
offset_bottom = 724.0
script = ExtResource("1_territory")

[node name="Background" type="NinePatchRect" parent="."]
layout_mode = 0

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 38.0
offset_top = 640.0
offset_right = 118.0
offset_bottom = 680.0
text = "‚Üê Back"

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -633.5
offset_top = 33.0
offset_right = -333.5
offset_bottom = 83.0
grow_horizontal = 2
text = "TERRITORY COMMAND"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="."]
custom_minimum_size = Vector2(1000, 600)
layout_mode = 0
offset_left = 182.0
offset_top = 63.0
offset_right = 1182.0
offset_bottom = 663.0

[node name="TerritoryList" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ResourceDisplay" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 610.0
offset_top = 20.0
offset_right = 1251.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
script = ExtResource("2_xlxuo")

[node name="EssenceLabel" type="Label" parent="ResourceDisplay"]
layout_mode = 2
text = "Divine Essence: 1000"
horizontal_alignment = 1

[node name="VSeparator" type="VSeparator" parent="ResourceDisplay"]
visible = false
layout_mode = 2

[node name="CrystalLabel" type="Label" parent="ResourceDisplay"]
layout_mode = 2
text = "Crystals: 0"
horizontal_alignment = 1

[node name="TicketsLabel" type="Label" parent="ResourceDisplay"]
layout_mode = 2
text = "Summoning Tickets: 0"
horizontal_alignment = 1

[node name="MaterialsButton" type="Button" parent="ResourceDisplay"]
layout_mode = 2
text = "Materials"

[node name="MaterialsCountLabel" type="Label" parent="ResourceDisplay"]
layout_mode = 2
text = "Materials: 0 types"
horizontal_alignment = 1
